force-app/main/default/objects/ILMN_Log__e/ILMN_Log__e.object-meta.xml
<CustomObject>
    <label>ILMN Log</label>
    <pluralLabel>ILMN Logs</pluralLabel>
</CustomObject>