force-app/main/default/objects/ILMN_Log__e/fields/Elapsed_Time__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_Time__c</fullName>
    <description>Elapsed time in ms</description>
    <label>Elapsed Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>