force-app/main/default/objects/ILMN_Log__e/fields/Log_Categorization__c.field-meta.xml
<CustomField>
    <fullName>Log_Categorization__c</fullName>
    <description>CMSI-5 This filed is used to set the log category into apex, batchable, queueable, Interface</description>
    <label>Log Categorization</label>
    <length>20</length>
    <type>Text</type>
</CustomField>