force-app/main/default/objects/ILMN_Log__e/fields/RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeName__c</fullName>
    <description>CMSI-4 Emit on Every Pop with Seq 1</description>
    <label>RecordTypeName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>