force-app/main/default/objects/ILMN_Log__e/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <description>Used to link exception log(s) with this debug log record. Code in ilib_LogEvent, ApexExceptions, and IlmnLogs</description>  
    <label>Transaction Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>